menu bar spacing corrected

--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,10 @@ body {
   text-decoration: none;
 }
 
+.linkies {
+  padding: 0 2% 0 2%;
+}
+
 .petProjects {
   color: white;
   box-shadow: 1px 2px 2px grey;
